--- a/dataset/Battery_Health_Status_model.ipynb
+++ b/dataset/Battery_Health_Status_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "e585e3d7-0a19-44dd-8841-cf40bab190b9",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "2d45e4a0-694d-450f-979a-0b75ec48e652",
    "metadata": {},
    "outputs": [
@@ -135,14 +135,14 @@
        "4               Good  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load the dataset\n",
-    "file_path = \"/Users/ezhilarasuv.r/Downloads/Battery_Status_Dataset.csv\"  # Update path if necessary\n",
+    "file_path = \"Battery_Status_Dataset.csv\"  # Update path if necessary\n",
     "df = pd.read_csv(file_path)\n",
     "\n",
     "# Display the first few rows\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "957d020c-823d-4ffb-b450-bbb6fae63a29",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "e9bf5a50-3784-41e9-ad55-31b93c6baa33",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "5ad07a69-2bc9-4a2c-9270-85c3001474f1",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,18 @@
      "output_type": "stream",
      "text": [
       "Training set size: (16, 6)\n",
-      "Testing set size: (4, 6)\n"
+      "Testing set size: (4, 6)\n",
+      "    Capacity (mAh)  Battery Health (%)  Cycle Count  Voltage (V)  \\\n",
+      "0             3000                  90          150          3.7   \n",
+      "17            2900                  86          200          3.7   \n",
+      "15            3000                  76          310          3.6   \n",
+      "1             2500                  85          250          3.8   \n",
+      "\n",
+      "    Temperature (°C)  Internal Resistance (mΩ)  \n",
+      "0                 35                        80  \n",
+      "17                33                       100  \n",
+      "15                39                       125  \n",
+      "1                 32                       100  \n"
      ]
     }
    ],
@@ -214,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "afb0a589-7763-47cc-9663-954b2e165893",
    "metadata": {},
    "outputs": [
@@ -631,7 +642,7 @@
        "RandomForestClassifier(random_state=42)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "7429fe22-a01d-4af0-aa6b-ab537b014e35",
    "metadata": {},
    "outputs": [
@@ -682,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db01d8e6-8d2c-44e1-aa8f-69abf84c63d2",
+   "id": "5e04cc3a",
    "metadata": {},
    "outputs": [],
    "source": []
